//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table user {
  id String [pk]
  username String [unique, not null]
  password String
  avatar String
  email String [unique, not null]
  first_name String
  last_name String
  token_expiry_date DateTime
  verify_email_token String
  reset_password_token String
  wallet_address String
  auth_email_google String [unique]
  auth_metamask_wallet String [unique]
  time_send_token DateTime
  role Role [not null, default: 'reader']
  stars Int [not null, default: 0]
  salt String
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime
  nonce_for_earn Int [default: 0]
  nonce_auth_metamask String
  user_token user_token
  news news [not null]
  user_claim_news user_claim_news [not null]
}

Table user_token {
  id Int [pk, increment]
  refresh_token String
  refresh_token_times Int
  access_token String [not null]
  user_id String [unique, not null]
  user user [not null]
}

Table news {
  id Int [pk, increment]
  token_id Int [not null]
  title String [not null]
  slug String [not null]
  thumbnail String [not null]
  content_url String [not null]
  cid String [unique, not null]
  total_supply String
  short_description String
  short_content String
  payment_token Int
  min_read Float [not null]
  author user [not null]
  author_id String [not null]
  published Boolean [not null, default: true]
  created_at DateTime [default: `now()`, not null]
  categories_on_news categories_on_news [not null]
  tags_on_news tags_on_news [not null]
  user_claim_news user_claim_news [not null]
}

Table categories_on_news {
  news news [not null]
  news_id Int [not null]
  category category [not null]
  category_id Int [not null]
  assigned_at DateTime [default: `now()`, not null]

  indexes {
    (news_id, category_id) [pk]
  }
}

Table user_claim_news {
  news news [not null]
  news_id Int [not null]
  user user [not null]
  user_id String [not null]
  transaction_id String [unique, not null]
  token_earned String [not null]
  status ClaimStatus [not null, default: 'pending']
  created_at DateTime [default: `now()`, not null]

  indexes {
    (news_id, user_id) [pk]
  }
}

Table tags_on_news {
  news news [not null]
  news_id Int [not null]
  tag tag [not null]
  tag_id Int [not null]
  assigned_at DateTime [default: `now()`, not null]

  indexes {
    (news_id, tag_id) [pk]
  }
}

Table category {
  id Int [pk, increment]
  name String [unique, not null]
  categories_on_news categories_on_news [not null]
}

Table tag {
  id Int [pk, increment]
  name String [not null]
  link String [not null]
  tags_on_news tags_on_news [not null]
}

Enum Role {
  writer
  reader
  root
}

Enum ClaimStatus {
  pending
  success
  failure
}

Ref: user_token.user_id - user.id

Ref: news.author_id > user.id

Ref: categories_on_news.news_id > news.id

Ref: categories_on_news.category_id > category.id

Ref: user_claim_news.news_id > news.id

Ref: user_claim_news.user_id > user.id

Ref: tags_on_news.news_id > news.id

Ref: tags_on_news.tag_id > tag.id